crates/clearhead-cli/tests/snapshots/snapshots_from_examples__with_completed_date.snap
---
source: crates/clearhead-cli/tests/snapshots_from_examples.rs
expression: actions
---
[
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: completed,
    name: "finish report",
    description: None,
    priority: None,
    contexts: None,
    planned: None,
    due_date: None,
    completed_at: Some("2025-01-19T16:45:00[local-offset]"),
    created_at: None,
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
]
