crates/clearhead-cli/tests/snapshots/snapshots_from_examples__with_do_date.snap
---
source: crates/clearhead-cli/tests/snapshots_from_examples.rs
expression: actions
---
[
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: completed,
    name: "meeting with team",
    description: None,
    priority: None,
    contexts: None,
    planned: Some("2025-01-20T14:30/2025-01-20T16:00"),
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
]
