crates/clearhead-cli/tests/snapshots/snapshots_from_examples__with_id_with_dash.snap
---
source: crates/clearhead-cli/tests/snapshots_from_examples.rs
expression: actions
---
[
  Action(
    id: "[uuid]",
    parent_id: "[uuid]",
    state: completed,
    name: "task with id",
    description: None,
    priority: None,
    contexts: None,
    planned: None,
    due_date: None,
    completed_at: None,
    created_at: None,
    predecessors: None,
    charter: None,
    alias: None,
    is_sequential: None,
    plan_id: None,
    external_occurrence_key: None,
  ),
]
